src/test/deca/context/invalid/condition.deca
{
    Object o;
    if(o) {
        5;
    }
}
